--- a/2016/_config.yml
+++ b/2016/_config.yml
@@ -1,7 +1,7 @@
 full_rebuild: true
 name: MASTER SONIC ARTS
 author: Giuseppe Silvi
-parentwebsite: http://giuseppesilvi.com
+parentwebsite: http://giuseppesilvi.com/ESEMSA/2016/
 version: V 0.1
 encoding: utf-8
 defaults:
